# rust-hl-bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: config.rs  coordinator.rs  database.rs  main.rs  telegram.rs
src/hyperliquid/: client.rs  mod.rs  websocket.rs
