[package]
name = "hl-tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# HTTP client for Telegram API
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# URL handling
url = "2.4"

# Utilities
futures-util = "0.3"

# Database (Supabase/PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for user IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation for retry jitter
rand = "0.8"

# Telegram bot framework
teloxide = { version = "0.12", features = ["macros"] }